src/containers-data-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange
  labels:
    app: data-exchange
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: data-exchange
  template:
    metadata:
      labels:
        app: data-exchange
    spec:
      containers:
      - name: busybox
        image: busybox:1.36
        command: ["/bin/sh", "-c"] 
        args: ["while true; do echo $(date) >> /var/log/share/data.txt; sleep 5; done"] 
        volumeMounts:
        - name: storage
          mountPath: /var/log/share
      - name: network-multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: storage
          mountPath: /var/data/read
      volumes:
      - name: storage
        emptyDir: {}
