src/deploy-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-init-deployment
  labels:
    app: nginx-conditional
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-conditional
  template:
    metadata:
      labels:
        app: nginx-conditional
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
