src/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-multitool
spec:
  containers:
  - name: multitool
    image: wbitt/network-multitool
