src/pv-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-pvc
spec:
  replicas: 1                 # ЗАДАНИЕ: Укажите количество реплик
  selector:
    matchLabels:
      app: storage-app         # ДОПОЛНИТЕ: Метка для селектора
  template:
    metadata:
      labels:
        app: storage-app       # ПОВТОРИТЕ: Метка из selector.matchLabels
    spec:
      containers:
      - name: busybox-writer  # ДОПОЛНИТЕ: Имя первого контейнера
        image: busybox:1.36
        command: ["/bin/sh", "-c"] 
        # КЛЮЧЕВОЕ: Дописываем дату каждые 5 секунд в цикле, чтобы выполнить условия задачи
        args: ["while true; do echo $(date) >> /mnt/data/shared.txt; sleep 5; done"] 
        volumeMounts:
        - name: pv-storage    # ДОПОЛНИТЕ: Имя монтируемого раздела (совпадает с volumes[0].name)
          mountPath: /mnt/data # КЛЮЧЕВОЕ: Путь монтирования хранилища внутри контейнера 1
      - name: multitool-reader # ДОПОЛНИТЕ: Имя второго контейнера (multitool по задаче)
        image: wbitt/network-multitool
        volumeMounts:
        - name: pv-storage    # ДОПОЛНИТЕ: Имя монтируемого раздела (совпадает с volumes[0].name)
          mountPath: /mnt/data # КЛЮЧЕВОЕ: Путь монтирования хранилища внутри контейнера 2
      volumes:
      - name: pv-storage      # ДОПОЛНИТЕ: Имя монтируемого раздела хранилища
        persistentVolumeClaim:
          claimName: local-pvc # КЛЮЧЕВОЕ: Совпадает с именем PVC, объявленного выше
