src/sc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-sc
spec:
  replicas: 1                   # ЗАДАНИЕ: Укажите количество реплик
  selector:
    matchLabels:
      app: sc-app               # ДОПОЛНИТЕ: Метка для селектора
  template:
    metadata:
      labels:
        app: sc-app             # ПОВТОРИТЕ: Метка из selector.matchLabels
    spec:
      containers:
      - name: busybox-writer    # ДОПОЛНИТЕ: Имя первого контейнера
        image: busybox:1.36
        command: ["/bin/sh", "-c"] 
        args: ["while true; do echo $(date) >> /mnt/sc-data/shared.txt; sleep 5; done"]  # КЛЮЧЕВОЕ: Запись даты каждые 5 секунд
        volumeMounts:
        - name: sc-storage       # ДОПОЛНИТЕ: Имя монтируемого раздела
          mountPath: /mnt/sc-data # КЛЮЧЕВОЕ: Путь монтирования внутри контейнера 1
      - name: multitool-reader  # ДОПОЛНИТЕ: Имя второго контейнера (multitool)
        image: wbitt/network-multitool
        volumeMounts:
        - name: sc-storage       # ДОПОЛНИТЕ: Имя монтируемого раздела
          mountPath: /mnt/sc-data # КЛЮЧЕВОЕ: Путь монтирования внутри контейнера 2
      volumes:
      - name: sc-storage         # ДОПОЛНИТЕ: Имя монтируемого раздела хранилища
        persistentVolumeClaim:
          claimName: sc-pvc     # КЛЮЧЕВОЕ: Совпадает с именем PVC
