src/service-init.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-conditional-svc
spec:
  selector:
    app: nginx-conditional
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
